--- a/mod3_solution/foundItems.html
+++ b/mod3_solution/foundItems.html
@@ -1,6 +1,7 @@
 <ol>
   <li ng-repeat="item in found">
-    {{item.name}}
+    {{item.id}} - {{item.short}} - {{item.name}}
     <button ng-click="onRemove({index: $index});" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span>Don't want this one!</button>
   </li>
 </ol>
+<div class="error" ng-if="found.length == 0">Nothing found!</div>
